@@ -205,8 +205,7 @@ unique_ptr<CommandTable> commands(shared_ptr<Root> root) {
                                             &MetaCommands::print_object_tree_complete} },
         {"substitute",     { meta_commands, &MetaCommands::substitute_cmd,
                                             &MetaCommands::substitute_complete} },
-        {"foreach",        { meta_commands, &MetaCommands::foreachCmd,
-                                            &MetaCommands::foreachComplete} },
+        {"foreach",        { meta_commands, &MetaCommands::foreachCommand} },
         {"sprintf",        { meta_commands, &MetaCommands::sprintf_cmd,
                                             &MetaCommands::sprintf_complete} },
         {"new_attr",       { meta_commands, &MetaCommands::new_attr_cmd,
